# hackathon-16-01-25

./: README.md
backend/: .gitignore  Makefile  README.md  app.py  cdk.json  lambda_dep_init.sh  pyproject.toml
backend/backend/: backend_stack.py  our_function.py  ourlambda.py  s3_bucket.py
backend/lambda/src/categorize_object/: categorize_object.py
backend/lambda/src/check_input/: check_input.py
backend/lambda/src/check_needed_information/: check_needed_information.py
backend/lambda/src/create_complete_offer/: create_complete_offer.py
backend/lambda/src/create_offer_creator/: create_offer_creator.py
backend/lambda/src/define_object/: define_object.py
backend/lambda/src/fetch_image/: fetch_image.py
backend/lambda/src/get_active_creator/: get_active_creator.py
backend/lambda/src/get_offer_by_id/: get_offer_by_id.py
backend/lambda/src/get_presigned_url/: get_presigned_url.py
backend/lambda/src/get_price/: get_price.py
backend/lambda/src/hello/: hello.py
backend/lambda/src/list_offers/: list_offers.py
backend/src/lambda/hello/: hello.py
frontend/: app.json  babel.config.js  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(components)/chat/: MessageBubble.tsx  MessageInput.tsx
frontend/app/(components)/common/: SearchBar.tsx  SettingsInput.tsx
frontend/app/(components)/marketplace/: OfferCard.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx
frontend/app/(types)/: message.types.ts  offer.types.ts
frontend/app/_utils/: useSettingsStore.ts
frontend/app/offer/: [id].tsx
frontend/app/theme/: colors.ts
(+5 files in other folders)
